// Code generated by mojo. DO NOT EDIT.

syntax = "proto3";

package mojo.db.sql;

import "mojo/db/sql/statement.proto";

option go_package = "github.com/mojo-lang/db/go/pkg/mojo/db/sql;sql";
option java_multiple_files = true;
option java_outer_classname = "SourceFileProto";
option java_package = "org.mojolang.mojo.db.sql";

message SourceFile {
    string name = 1;
    string full_name = 2;
    repeated Statement statements = 12;
}